@@ -1,3 +1,9 @@
+2004-06-20  Stefan Jahn  <stefan@lkcc.org>
+
+	* devices/jfet.cpp: Implemented non-ideal saturation current
+	parameters of gate-source and gate-drain diodes.
+	Also prepared JFET model for n- and p-type devices.
+
 2004-06-19  Stefan Jahn  <stefan@lkcc.org>
 
 	* devices/device.h (class device): New class containing some
